# smartborrow

./: .env.example  .gitignore  AIE7_CERTIFICATION_DELIVERABLES.md  ARCHITECTURE_OVERVIEW.md  DEMO_TALK_TRACK.md  FINAL_SUMMARY.md  PERFORMANCE_README.md  README.md  SESSION_CODE_WALKTHROUGH.md  TECHNICAL_ARCHITECTURE_FLOW.md  pyproject.toml  requirements.txt  snowflake_agent.db  test.db
.cursor/: rules
backend/: requirements.txt  snowflake_agent.db
backend/scripts/: load_kb.py
backend/src/app/: main.py  schemas.py
backend/src/app/core/: config.py  database.py  encryption_service.py  security.py
backend/src/app/models/: optimization_check.py  snowflake_connection.py  user.py
backend/src/app/routers/: users.py
backend/src/app/scripts/: load_kb.py
backend/src/app/services/: executor_service.py  risk_assessor_service.py  scanner_service.py  snowflake_service.py  user_service.py
backend/src/app/tests/: conftest.py  test_agent_services.py  test_api.py  test_snowflake_service.py
data/: web_search_cache.json
data/faiss/: index.faiss
src/smartborrow/: __init__.py  cli.py
src/smartborrow/agents/: __init__.py  application_helper.py  base_agent.py  coordinator.py  enhanced_agent_system.py  enhanced_coordinator.py  grant_specialist.py  loan_specialist.py  tavily_web_search.py
src/smartborrow/core/: __init__.py  config.py  models.py
src/smartborrow/data/: README.md  __init__.py  content_enricher.py  csv_processor.py  orchestrator.py  pdf_processor.py  synthetic_expander.py
src/smartborrow/evaluation/: __init__.py  evaluation_runner.py  performance_tracker.py  ragas_evaluator.py  test_loader.py
src/smartborrow/rag/: __init__.py  advanced_chunking.py  document_loader.py  optimized_rag_service.py  rag_chain.py  rag_service.py  vector_store.py
src/smartborrow/retrieval/: __init__.py  advanced_rag_service.py  hybrid_retriever.py  hybrid_retriever_advanced.py  knowledge_retriever.py  numerical_retriever.py
src/smartborrow/ui/: __init__.py  main_app.py  people_first_app.py  smart_interface.py
src/smartborrow/ui/calculators/: smart_financial_planner.py
src/smartborrow/ui/components/: emotional_support.py  guided_workflows.py  user_testing.py
src/smartborrow/ui/pages/: __init__.py
src/smartborrow/ui/wizards/: financial_aid_wizard.py
